ArrowLauncher: Make double tap to sleep gesture optional
Change-Id: I277ce8786935c1f115fd455d2ed365dfeaf349b3
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -55,6 +55,13 @@
         android:title="@string/title_show_google_app"
         android:summary="@string/pref_show_google_now_summary"
         android:defaultValue="true" />
+ 
+    <SwitchPreference
+        android:key="pref_sleep_gesture"
+        android:title="@string/pref_sleep_gesture_title"
+        android:summary="@string/pref_sleep_gesture_summary"
+        android:defaultValue="true"
+        android:persistent="true"/>
 
     <androidx.preference.PreferenceScreen
         android:key="pref_developer_options"
