--- a/res/values/arrow_strings.xml
+++ b/res/values/arrow_strings.xml
@@ -25,4 +25,9 @@
     <!-- Folder titles -->
     <string name="google_folder_title" translatable="false">Google</string>
 
+    <!-- Hotseat searchbar -->
+    <string name="label_search">Search</string>
+    <string name="label_lens">Google Lens</string>
+    <string name="label_voice_search">Voice search</string>
+
 </resources>
