--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -105,4 +105,10 @@
             android:targetClass="ink.kscope.parallelspace.MainActivity" />
     </Preference>
 
+    <SwitchPreference
+        android:key="pref_allapps_themed_icons"
+        android:title="@string/pref_themed_icons_title"
+        android:summary="@string/pref_themed_icons_summary"
+        android:persistent="true" />
+
 </androidx.preference.PreferenceScreen>
