ArrowLauncher: Add support for parallel space
spkal01: Forward Port to 13
Change-Id: I13bee37cae645f50512f4d80cdfa25f84dce1b6b
Signed-off-by: LibXZR <i@xzr.moe>

--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -95,4 +95,14 @@
         android:summaryOn="@string/settings_lock_layout_summary_on"
         android:summaryOff="@string/settings_lock_layout_summary_off" />
 
+    <Preference
+        android:key="parallel_space"
+        android:title="@string/laboratory_parallel_space_title"
+        android:summary="@string/laboratory_parallel_space_summary"
+        android:order="-994">
+        <intent
+            android:targetPackage="ink.kscope.parallelspace"
+            android:targetClass="ink.kscope.parallelspace.MainActivity" />
+    </Preference>
+
 </androidx.preference.PreferenceScreen>
