--- a/res/values/arrow_strings.xml
+++ b/res/values/arrow_strings.xml
@@ -82,4 +82,7 @@
     <!-- Suggestions -->
     <string name="suggestion_pref_screen_title">Suggestions</string>
     <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
+
+    <!-- button string shown pause work profile -->
+    <string name="work_apps_pause_btn_text_arrow">Turn off work apps</string>
 </resources>
