--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -20,7 +20,8 @@
 
     <Preference
         android:key="pref_trust_apps"
-        android:title="@string/trust_apps_manager_name" />
+        android:title="@string/trust_apps_manager_name"
+        android:summary="@string/trust_apps_manager_summary" />
 
     <Preference
         android:key="pref_icon_pack"
